style.css
@import url('https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap');

body {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  background-color: #fddcbc;
  align-items: center;
  justify-content: center;
  height: 100vh;
  margin: 0;
}

#sketch-board {
  display: flex;
  flex-direction: column;
  background-color: #bf2f19;
  border-radius: 54px;
  width: 770px;
  height: 760px;
  padding: 21px;
  gap: 21px;
}

#top-board {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #ffac22;
  font-size: 41pt;
  text-shadow: -1px 1px 2px #282828;
  margin: 0;
}

#main-name,
#registered-trademark {
  font-family: 'Oleo Script';
}

#registered-trademark {
  font-size: 15pt;
  padding: 6px 0 0 8px;
  align-self: flex-start;
}

.top-side-text,
footer,
#bottom-board {
  font-family: Helvetica, sans-serif;
}

.top-side-text {
  font-style: italic;
  padding: 0 25px;
  font-size: 17pt;
}

#grid-container {
  display: grid;
  align-self: center;
  width: 560px;
  height: 560px;
}

.grid-square {
  background-color: #fde9d3;
}

#grid-container:hover {
  cursor: crosshair;
}

.grid-square-drawn {
  background-color: #9a9a90;
}

#bottom-board {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 75px;
  gap: 21px;
  color: white;
}

.regular-button {
  height: 46px;
  padding: 0 18px;
  border-radius: 5px;
  border: 1px solid white;
  background-color: #bf2f19;
  color: white;
  transform: scale(1);
  font-size: 12pt;
  font-weight: 600;
  box-shadow: 0 2px 0.2rem #8a2f19;
}

.regular-button:hover {
  cursor: pointer;
  transform: scale(1.1);
}

.regular-button:active {
  transform: scale(1);
}

#grid-container div:first-child {
  border-top-left-radius: 12px;
}

#top-right-square {
  border-top-right-radius: 12px;
}

#bottom-left-square {
  border-bottom-left-radius: 12px;
}

#grid-container div:last-child {
  border-bottom-right-radius: 12px;
}

.fa-github {
  color: black;
}

footer {
  margin-top: 21px;
}

footer a {
  font-size: 22px;
}

